--- a/stravaClient/package.json
+++ b/stravaClient/package.json
@@ -32,6 +32,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "eslint": "^3.4.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-react": "^6.1.2",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "webpack": "^1.13.1"
