--- a/stravaClient/.eslintrc.json
+++ b/stravaClient/.eslintrc.json
@@ -17,6 +17,9 @@
         "react"
     ],
     "rules": {
+//        "no-unused-vars": [
+//            "off"
+//        ],
         "no-console": [
             "off"
         ],
