--- a/stravaClient/.eslintrc.json
+++ b/stravaClient/.eslintrc.json
@@ -23,6 +23,9 @@
         "no-console": [
             "off"
         ],
+        "no-debugger": [
+            "off"
+        ],
         "indent": [
             "error",
             4,
