--- a/stravaClient/package.json
+++ b/stravaClient/package.json
@@ -17,6 +17,7 @@
     "jquery": "^2.2.4",
     "json-loader": "^0.5.4",
     "material-ui": "^0.15.2",
+    "moment": "^2.14.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
