--- a/stravaClient/package.json
+++ b/stravaClient/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.14.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^1.0.0",
