--- a/stravaClient/package.json
+++ b/stravaClient/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.12.0",
+    "geojson": "^0.3.0",
     "jquery": "^2.2.4",
     "json-loader": "^0.5.4",
     "material-ui": "^0.15.2",
