--- a/stravaClient/package.json
+++ b/stravaClient/package.json
@@ -19,6 +19,7 @@
     "json-loader": "^0.5.4",
     "material-ui": "^0.15.2",
     "moment": "^2.14.1",
+    "mongoose": "^4.6.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-google-maps": "^4.11.0",
