--- a/stravaClient/package.json
+++ b/stravaClient/package.json
@@ -20,6 +20,7 @@
     "material-ui": "^0.16.1",
     "moment": "^2.14.1",
     "mysql": "^2.11.1",
+    "rc-slider": "^5.3.5",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-redux": "^4.4.5",
